--- a/app/templates/items_new.html
+++ b/app/templates/items_new.html
@@ -185,6 +185,11 @@ h2 {
     margin-bottom: 16px !important;     /* بدل 22px */
 }
 
+.btn-primary {
+    margin-top: -4px !important;
+}
+
+
 </style>
 
 
@@ -256,7 +261,7 @@ h2 {
   </div>
 
 
-<div class="mb-3" style="margin-top:-16px;">
+<div class="mb-3" style="margin-top:-40px;">
   <label class="form-label" style="margin-bottom:6px;">Images (up to 10)</label>
 
 <div class="upload-box" onclick="document.getElementById('imgInput').click();">
