--- a/app/templates/booking_flow.html
+++ b/app/templates/booking_flow.html
@@ -1252,6 +1252,8 @@
   </div>
 {% endif %}
 
+
+{% if booking.status in ['paid'] and is_renter %}
   <div class="sticky-actions d-sm-none">
   </div>
 
